<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".after7">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        android:textAlignment="textEnd"
        app:title="@string/fitness_app_after_18"
        app:titleTextColor="@color/white"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/before1_pic"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="400dp"
                    android:src="@drawable/dumbbell_bicep"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/before1_btn"
                android:layout_below="@id/before1_pic"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/timer_button"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:text="@string/time1"
                    android:textSize="28sp"
                    android:padding="15dp"
                    android:background="@drawable/btn_bg_rnd"
                    />
                <Button
                    android:id="@+id/start_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/start"
                    android:background="@drawable/btn_bg_rnd2"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text1"
                android:text="@string/benifit"
                android:textSize="30sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/squatstext"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu"
        android:background="@color/red" />
</RelativeLayout>