<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:background="@color/black">

   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:background="@color/red"
       android:textAlignment="textEnd"
       app:title="@string/fitness_app"
       app:titleTextColor="@color/white" />


   <ScrollView
       android:layout_below="@id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
      <LinearLayout

          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

         <LinearLayout
             android:id="@+id/step_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/toolbar"
             android:orientation="vertical"
             android:layout_marginTop="45dp"
             android:clickable="true"
             android:focusable="true">

            <LinearLayout
                android:id="@+id/step_1_2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:background="@drawable/backgroundround"
                android:clickable="true"
                android:focusable="true">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="300dp"
                   android:orientation="horizontal"
                   android:layout_gravity="center">

                  <ImageView
                      android:layout_width="150dp"
                      android:layout_height="wrap_content"
                      android:padding="10dp"
                      android:src="@drawable/home_icon_1" />

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:layout_gravity="center"
                      android:layout_weight="1.0">

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:text="@string/before_18"
                         android:textColor="@color/white"
                         android:fontFamily="@font/roboto_bold"
                         android:textSize="25dp" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:text="@string/days_60"
                         android:textColor="@color/black"
                         android:fontFamily="@font/roboto_light"
                         android:textSize="20dp" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:text="@string/every"
                         android:textColor="@color/white_light"
                         android:fontFamily="@font/roboto_light"
                         android:textSize="20dp" />
                  </LinearLayout>
               </LinearLayout>
            </LinearLayout>
         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/step_1"
             android:orientation="vertical"
             android:clickable="true"
             android:id="@+id/step_2"
             android:focusable="true">

            <LinearLayout
                android:id="@+id/step_2_1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:background="@drawable/backgroundround"
                android:clickable="true"
                android:focusable="true">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="300dp"
                   android:orientation="horizontal"
                   android:layout_gravity="center">

                  <ImageView
                      android:layout_width="150dp"
                      android:layout_height="wrap_content"
                      android:src="@drawable/home_icon_2" />

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_weight="1.0"
                      android:gravity="center"
                      android:layout_gravity="center">

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:text="@string/after_18"
                         android:textColor="@color/white"
                         android:fontFamily="@font/roboto_bold"
                         android:textSize="25dp" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:text="@string/days_60"
                         android:textColor="@color/black"
                         android:fontFamily="@font/roboto_light"
                         android:textSize="20dp" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:text="@string/every"
                         android:textColor="@color/white_light"
                         android:fontFamily="@font/roboto_light"
                         android:textSize="20dp" />
                  </LinearLayout>
               </LinearLayout>
            </LinearLayout>
         </LinearLayout>
      </LinearLayout>
   </ScrollView>

   <com.google.android.material.bottomnavigation.BottomNavigationView
       android:id="@+id/bottom_navigation"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       app:menu="@menu/bottom_navigation_menu"
       android:background="@color/red" />

</RelativeLayout>
